--- a/src/pages/HelpPage/HelpPage.css
+++ b/src/pages/HelpPage/HelpPage.css
@@ -1,6 +1,6 @@
 .container {
   height: 95vh;
-  background-image: url('help.png');
+  background-image: url('../../assets/help.png');
   background-size: auto 80%;
   background-repeat: no-repeat;
   background-position: left center; /* Background image positioned to the left and centered vertically */
