--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,7 +1,7 @@
 /* HomePage.css */
 .homepage-container {
     height: 95vh;
-    background-image: url('ie.jpeg');
+    background-image: url('../../assets/ie.jpeg');
     background-size: cover;
     background-position: center;
     text-align: center;
