--- a/src/pages/ForumPage/ForumPage.css
+++ b/src/pages/ForumPage/ForumPage.css
@@ -1,10 +1,13 @@
 
 .f_content {
+    width: 100%;
     display: flex;
     gap: 0 20px;
+    padding: 0 10px;
 }
 
 .f_threads {
+    width: 100%;
     flex: 3; /* takes up 3/4 of the space */
 }
 
