--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,13 +4,13 @@ body {
     color: var(--text_color);
 }
 
-/* a {
+a {
     color: inherit;
     text-decoration: none;
     background-color: transparent;
     outline: 0;
     transition: .15s;
-} */
+}
 
 .space {
     flex: 1;
