--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -33,6 +33,7 @@
     --d4_grey: #495b6e;
 
     --main_cl:  #9256f3;
+    --main_l_cl: #d3bbfa;
 
     --text_color: var(--black);
     --background_color: var(--l_grey);
