--- a/src/pages/ForumPage/ForumPage.css
+++ b/src/pages/ForumPage/ForumPage.css
@@ -2,6 +2,12 @@
 .f_content {
     width: 100%;
     display: flex;
+    justify-content: center;
+}
+
+.f_wrp {
+    width: 85%;
+    display: flex;
     gap: 0 20px;
     padding: 0 10px;
 }
@@ -12,5 +18,6 @@
 }
 
 .side_content {
+    width: 100%;
     flex: 1; /* takes up 1/4 of the space */
 }
