--- a/src/components/ModsOnline/ModsOnline.css
+++ b/src/components/ModsOnline/ModsOnline.css
@@ -22,10 +22,11 @@
     padding-left: 10px;
 }
 .usr .usr_name {
-    color: var(--main_l_cl);
+    color: var(--dual_l);
 }
 .usr .usr_ttl {
-    font-size: var(--fs_s);
+    font-size: var(--fs_xs);
+    color: var(--ll_grey)
 }
 
 .list_users>p {
