--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,10 +1,9 @@
 
 .navbar {
     width: 100%;
-    height: 60px;
+    height: var(--nav_ht);
     display: flex;
     justify-content: center;
-    margin-bottom: 25px;
     background: var(--main);
     color: var(--l_grey);
     user-select: none;
