--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -41,6 +41,7 @@
 
     --dual: #7e3ade;
     --dual_l: #a968f1;
+    --dual_d: #4f19b0;
 
     --text_color: var(--black);
     --background_color: var(--ll_grey);
