top thread and page done
comments missing

--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -33,6 +33,7 @@
     --ddd_grey: #5c728a;
     --d4_grey: #495b6e;
 
+    --main_l3: #dfddfc;
     --main_ll: #bbb9e7;
     --main_l: #7f80af;
     --main: #2b2d42;
